fixed button align

--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,13 @@ body {
     background-color: black;
     color: white;
 }
+
+.centered-buttons {
+    margin: auto;
+    justify-content: center;
+    display: flex;
+}
+
+h1, h2 {
+    text-align: center;
+}
